
syntax = "proto2";

package notifications;

option java_package = "com.blitz.notifications.proto";
option java_generic_services = true;
option java_multiple_files = true;

import "google/protobuf/descriptor.proto";
import "util.proto";


//----------------------------------------------------------------------------------------
// Notifications
//----------------------------------------------------------------------------------------
message Notification {
    optional string bundleID    = 1;  // The bundle ID of the app to send.
    optional string deviceToken = 2;  // The device token to send to in hex encoded string.
    optional string soundName = 3;  // The sound to play when the notification is received.

    optional util.Timestamp timestamp  = 4; // The date the message was sent.

    optional string messageText = 10;  // The message text.

    repeated util.KeyValue options = 20;  // Other keys are 'badge', 'content-available', etc.

    optional string debug_string = 100;
}

enum ClientOption {
    BLITZ_PROD = 1;
    BLITZ_SANDBOX = 2;
    BLITZ_LABS_PROD = 3;
    BLITZ_LABS_SANDBOX = 4;
}

message NotificationRequest {
    extensions 100 to max;

    optional string uuid = 1;
    optional string messageText = 2;

    optional string from_id = 3;
    optional string to_id = 4;

    optional ClientOption clientOption = 10 [default = BLITZ_PROD];
}

message FeedPostUpdate {
  extend NotificationRequest {
    optional FeedPostUpdate feed_post_update = 100;
  }

  optional string post_id = 1;
  optional string message_id = 2;
}

message PrivateChatUpdate {
    extend NotificationRequest {
        optional PrivateChatUpdate privateChatUpdate = 101;
    }
    optional string chat_id = 1;
    optional string message_id = 2;
}

message ShowWebUrl {
    extend NotificationRequest {
        optional ShowWebUrl showWebUrl = 102;
    }
    optional string url = 1;
}

message ShowMessage {
    extend NotificationRequest {
        optional ShowMessage showMessage = 103;
    }
    optional string message = 1;
}

message InviteFromFriend {
    extend NotificationRequest {
        optional InviteFromFriend inviteFromFriend = 104;
    }
    optional string friend_id = 1;
    optional string user_id = 2;
    optional string contactType = 3;
    optional string contact = 4;
    optional string message = 5;
}

message ShareWithFriends {
    extend NotificationRequest {
        optional ShareWithFriends shareWithFriends = 105;
    }
    optional string message = 1;
}

//----------------------------------------------------------------------------------------
// NotificationServer
//----------------------------------------------------------------------------------------
extend google.protobuf.MethodOptions {
  optional string server_endpoint = 71236;
}

service BlitzPushServer {
    rpc sendNotification(NotificationRequest) returns (Notification) {
        option (server_endpoint) = "send_n";
    }
}
