syntax = "proto2";
package BlitzMessage;

option java_package = "com.blitzhere.BlitzMessage";
option java_generic_services = true;

import "objectivec-descriptor.proto";
option (google.protobuf.objectivec_file_options).package = "";
option (google.protobuf.objectivec_file_options).class_prefix = "B";
option (google.protobuf.objectivec_file_options).relax_camel_case = true;


//----------------------------------------------------------------------------------------
//
//                                                                             Basic Types
//
//----------------------------------------------------------------------------------------


message Timestamp {
  optional double epoch = 1;
}


message Timespan {
  optional Timestamp startTimestamp = 1;
  optional Timestamp stopTimestamp  = 2;
}


message Point {
  optional double x       = 1;
  optional double y       = 2;
}


message Size {
  optional double width   = 1 [default = 0.0];
  optional double height  = 2 [default = 0.0];
}


message Coordinate {
  optional double latitude  = 1 [default = -360.0];
  optional double longitude = 2 [default = -360.0];
}


message CoordinateRegion {
  optional Coordinate center = 1;
  optional Coordinate span   = 2;
}


message CoordinatePolygon {
  repeated Coordinate points = 1;
}


message Location {
  optional Coordinate   coordinate  = 1;
  optional double       altitude    = 2;
  optional double       speed       = 3;
  optional double       course      = 4;
  optional Timestamp    timestamp   = 5;
  optional string       placename   = 6;
}


message Void {
  optional string text = 1;
}


message KeyValue {
  optional string key   = 1;
  repeated string value = 2;
}

